# facile

./: README.md  dune-project
benchmarks/: all_interval.ml  benchmarks.ml  costas_array.ml  cumulative_scheduling.ml  debruijn.ml  discrete_tomography.ml  dune  equation_solving.ml  golomb_ruler.ml  langford.ml  magic_square.ml  mortgage.ml  nonogram.ml  nqueens.ml  quasigroup_completion.ml  rack.ml  subset_sum.ml
lib/: dune  facile.mli  fcl_boolean.ml  fcl_cstr.ml  fcl_linear.ml  fcl_nonlinear.ml  fcl_sorting.ml  fcl_stak.ml
lib_test/: assignment.ml  combined_test.ml  conjunto_test.ml  cumulative_scheduling.ml  custom_cstr_test.ml  domain_test.ml  dune  fdarray_opti_test.ml  golomb.ml  interval_test.ml  knapsack.ml  knights.ml  magic_sequence.ml  map_coloring.ml  nonlinear_test.ml  nurse_schedule.ml  queens.ml  reify_test.ml  search_test.ml  send_more_money.ml  sorting_test.ml  sudoku.ml  var_fd_test.ml
